--- a/meeting3D/meeting3D/meeting3D.vcxproj
+++ b/meeting3D/meeting3D/meeting3D.vcxproj
@@ -19,14 +19,15 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="src\FaceDetection.cpp" />
+    <ClCompile Include="src\faceDetection\faceDetection.cpp" />
     <ClCompile Include="src\meeting3D.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="src\FaceDetection.h" />
-    <ClInclude Include="src\utils\BasicGeometry.hpp" />
-    <ClInclude Include="src\utils\Timer.hpp" />
-    <ClInclude Include="src\utils\Vector2D.hpp" />
+    <ClInclude Include="include\faceDetection\faceDetection.hpp" />
+    <ClInclude Include="include\faceDetection\faceDetectionInput.hpp" />
+    <ClInclude Include="include\utils\basicGeometry.hpp" />
+    <ClInclude Include="include\utils\timer.hpp" />
+    <ClInclude Include="include\utils\vector2D.hpp" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
@@ -91,12 +92,15 @@
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <LinkIncremental>true</LinkIncremental>
-    <IncludePath>C:\Users\alvar\Documents\openCV\opencv\build\include;C:\Users\alvar\Downloads\Universidad\Master\TFM\Repo\meeting3D\meeting3D\headers;$(IncludePath)</IncludePath>
+    <IncludePath>C:\Users\alvar\Documents\openCV\opencv\build\include;$(IncludePath)</IncludePath>
     <ExternalIncludePath>C:\Users\alvar\Documents\openCV\opencv\build\include;$(ExternalIncludePath)</ExternalIncludePath>
     <LibraryPath>C:\Users\alvar\Documents\openCV\opencv\build\x64\vc15\lib;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <LinkIncremental>false</LinkIncremental>
+    <IncludePath>C:\Users\alvar\Downloads\Universidad\Master\TFM\Repo\meeting3D\meeting3D\include;C:\Users\alvar\Documents\openCV\opencv\build\include;$(IncludePath)</IncludePath>
+    <ExternalIncludePath>C:\Users\alvar\Documents\openCV\opencv\build\include;$(ExternalIncludePath)</ExternalIncludePath>
+    <LibraryPath>C:\Users\alvar\Documents\openCV\opencv\build\x64\vc15\lib;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
@@ -148,12 +152,14 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>NDEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
+      <LanguageStandard>stdcpp20</LanguageStandard>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <GenerateDebugInformation>true</GenerateDebugInformation>
+      <AdditionalDependencies>opencv_world453.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
