--- a/meeting3D/meeting3D/meeting3D.vcxproj
+++ b/meeting3D/meeting3D/meeting3D.vcxproj
@@ -19,11 +19,11 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="src\faceDetection\cascadeFaceDetection.cpp" />
+    <ClCompile Include="src\faceDetection\faceDetection.cpp" />
     <ClCompile Include="src\meeting3D.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="include\faceDetection\cascadeFaceDetection.hpp" />
+    <ClInclude Include="include\faceDetection\faceDetection.hpp" />
     <ClInclude Include="include\faceDetection\faceDetectionInput.hpp" />
     <ClInclude Include="include\utils\basicGeometry.hpp" />
     <ClInclude Include="include\utils\timer.hpp" />
@@ -137,6 +137,7 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
+      <LanguageStandard>stdcpp20</LanguageStandard>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
