--- a/meeting3D/meeting3D/meeting3D.vcxproj.filters
+++ b/meeting3D/meeting3D/meeting3D.vcxproj.filters
@@ -18,12 +18,12 @@
     <ClCompile Include="src\meeting3D.cpp">
       <Filter>Archivos de origen</Filter>
     </ClCompile>
-    <ClCompile Include="src\faceDetection\cascadeFaceDetection.cpp">
+    <ClCompile Include="src\faceDetection\faceDetection.cpp">
       <Filter>Archivos de origen</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="include\faceDetection\cascadeFaceDetection.hpp">
+    <ClInclude Include="include\faceDetection\faceDetection.hpp">
       <Filter>Archivos de encabezado</Filter>
     </ClInclude>
     <ClInclude Include="include\utils\vector2D.hpp">
