--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -38,7 +38,7 @@ jobs:
           echo "$HOME\.sonar\build-wrapper-win-x86" | Out-File -Append -FilePath $env:GITHUB_PATH -Encoding utf8
       - name: Run build-wrapper
         run: |
-          echo env.BUILD_WRAPPER_OUT_DIR
+          echo --out-dir ${{ env.BUILD_WRAPPER_OUT_DIR }}
           build-wrapper-win-x86-64 --out-dir ${{ env.BUILD_WRAPPER_OUT_DIR }} msbuild meeting3D.sln
       - name: Run sonar-scanner
         env:
