--- a/meeting3D/meeting3D/meeting3D.vcxproj.filters
+++ b/meeting3D/meeting3D/meeting3D.vcxproj.filters
@@ -33,6 +33,9 @@
     <ClCompile Include="src\faceDetection\faceDetectionInitializer.cpp">
       <Filter>Archivos de origen</Filter>
     </ClCompile>
+    <ClCompile Include="src\cameraController\glewTest.cpp">
+      <Filter>Archivos de origen</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="include\faceDetection\faceDetection.hpp">
@@ -63,6 +66,9 @@
       <Filter>Archivos de encabezado</Filter>
     </ClInclude>
     <ClInclude Include="include\faceDetection\faceDetectionOutput.hpp">
+      <Filter>Archivos de encabezado</Filter>
+    </ClInclude>
+    <ClInclude Include="include\cameraController\glewTest.hpp">
       <Filter>Archivos de encabezado</Filter>
     </ClInclude>
   </ItemGroup>
